# Tax-Talk

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  debug.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  tax-talk-AutoDeployTrigger-069db4a4-1743-4a26-95a1-6a5ef82e2996.yml
scripts/: corpus_scripts.py  download.py  download_corpus.py
src/tax_talk/: __init__.py  config.py
src/tax_talk/api/: __init__.py  main.py
src/tax_talk/api/dependencies/: __init__.py  auth.py  services.py
src/tax_talk/api/endpoints/: chat.py  health.py
src/tax_talk/api/middleware/: __init__.py  observability.py
src/tax_talk/api/schemas/: __init__.py  chat.py  errors.py
src/tax_talk/api/services/: __init__.py  chat_services.py  prompt_builder.py
src/tax_talk/core/: config.py  rate_limit.py  runtime.py
src/tax_talk/evals/: dataset.py  run.py  runner.py
src/tax_talk/generation/: __init__.py  gemini_strategy.py  groq_strategy.py  llm_provider.py
src/tax_talk/ingestion/: __init__.py  chunker.py  contextual_summary.py  embeddings.py  loader.py  qdrant_store.py  run.py
src/tax_talk/ingestion/chunking_strategies/: __init__.py  base.py  contextual.py  fixed.py  helpers.py  registry.py  semantic.py
src/tax_talk/ingestion/embedding_strategies/: __init__.py  embedding_strategy.py  factory.py  gemini.py  sentence_transformer.py  voyage.py
src/tax_talk/models/: __init__.py  api.py  ingestion.py
src/tax_talk/retrieval/: __init__.py  bm25_index.py  dense_search.py  hybrid.py  rerank.py
src/tax_talk/retrieval/helpers/: filters.py  fusion.py  tokenization.py
tests/: test_api_main.py  test_chat_services.py  test_chunker_contextual_summary.py  test_chunking_strategies.py  test_embediing_provider_alias.py  test_eval_dataset.py  test_eval_runner_fallback.py  test_eval_runner_rate_limit.py  test_hybrid_retrieval.py  test_ingestion_strategy_paths.py  test_langfuse_config.py  test_llm_strategy_runtime.py  test_qdrant_store_batching.py  test_smoke.py
