[project]
name = "tax-talk"
version = "0.1.0"
description = "Production RAG over Indian GST + Income Tax rules"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Krishna Khandelwal", email = "khandelwal1733@gmail.com" }]

dependencies = [
    # LLM providers
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=0.3.0",
    "cohere>=5.13.0",

    # Orchestration
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "pydantic-ai>=0.0.14",
    "instructor>=1.7.0",

    # Retrieval
    "qdrant-client>=1.12.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.3.0",
    "huggingface-hub>=0.30.0",

    # API + async
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.3",

    # Data + config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "pypdf>=5.1.0",
    "beautifulsoup4>=4.12.0",
    "tqdm>=4.67.0",

    # Observability
    "langfuse>=2.55.0",

]


[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "ipython>=8.30.0",
    "jupyter>=1.1.0",
]

evals = [
    "ragas>=0.2.0",
    "datasets>=2.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tax_talk"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501", "RUF001", "RUF003"]  # keep existing unicode content stable

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = false  # start lenient, tighten later
ignore_missing_imports = true
