[project]
name = "tax-talk"
version = "0.1.0"
description = "Production RAG over Indian GST + Income Tax rules"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Krishna Khandelwal", email = "khandelwal1733@gmail.com" }]

dependencies = [
    # LLM providers
    "groq==1.4.0",
    "openai==2.38.0",
    "google-genai==2.7.0",
    "cohere==7.0.2",

    # Retrieval
    "qdrant-client==1.18.0",
    "rank-bm25==0.2.2",
    "sentence-transformers==5.5.1",
    "huggingface-hub==1.17.0",

    # API + async
    "fastapi==0.136.3",
    "uvicorn[standard]==0.48.0",
    "httpx==0.28.1",
    "sse-starlette==3.4.4",

    # Data + config
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "python-dotenv==1.2.2",
    "pypdf==6.12.2",
    "beautifulsoup4==4.14.3",
    "tqdm==4.67.3",

    # Observability
    "langfuse==4.7.0",

    # Evals (IMPORTANT: pinned)
    "ragas==0.4.3",
    "datasets==4.8.5",

    # LangChain ecosystem (LOCKED to working-compatible set)
    "langchain==0.3.30",
    "langchain-community==0.3.31",
    "langchain-core==0.3.86",
    "langchain-openai==0.3.35",
    "langchain-text-splitters==0.3.11",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "ruff==0.8.0",
    "mypy==2.1.0",
    "ipython==9.14.0",
    "jupyter==1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tax_talk"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501", "RUF001", "RUF003"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true